[gd_scene load_steps=16 format=3 uid="uid://b0jhbqhd4dhhx"]

[ext_resource type="Script" path="res://Enemies/Oracle/oracle.gd" id="1_4uhgo"]
[ext_resource type="PackedScene" uid="uid://c0k62py27crqg" path="res://Enemies/Oracle/Sprite/oracle_sprite.tscn" id="2_bhm20"]
[ext_resource type="Script" path="res://Enemies/Oracle/Orb/orb.gd" id="3_rdk7r"]
[ext_resource type="Script" path="res://Enemies/hurt_box.gd" id="6_trf8c"]
[ext_resource type="Script" path="res://Enemies/Oracle/oracle_state_machine.gd" id="7_ayryw"]
[ext_resource type="Script" path="res://Enemies/Oracle/oracle_state_spawn.gd" id="8_5t67c"]
[ext_resource type="Script" path="res://Enemies/Oracle/oracle_state_walk.gd" id="8_nkvch"]
[ext_resource type="Texture2D" uid="uid://c1nhcfqj5fpm1" path="res://Enemies/Oracle/Orb/Oracle Orb 1.png" id="9_j71aq"]
[ext_resource type="Script" path="res://Enemies/Oracle/oracle_state_attack.gd" id="9_r57yu"]
[ext_resource type="Texture2D" uid="uid://b1dakq7bkujow" path="res://Enemies/Oracle/Orb/Oracle Orb Light.png" id="10_v34uc"]
[ext_resource type="PackedScene" uid="uid://b8c6s8ng5867s" path="res://Enemies/Indicators/attack_warning_indicator.tscn" id="11_hcnwp"]
[ext_resource type="PackedScene" uid="uid://n88qgch6n50w" path="res://Enemies/Indicators/stun_indicator.tscn" id="12_p5t44"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7cdws"]
radius = 60.0083

[sub_resource type="CircleShape2D" id="CircleShape2D_jsqd4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qpr8m"]
radius = 13.0
height = 64.0

[node name="Oracle" type="RigidBody2D" node_paths=PackedStringArray("sprite") groups=["Oracles"]]
collision_layer = 64
linear_damp = 5.0
script = ExtResource("1_4uhgo")
sprite = NodePath("Sprite")

[node name="Sprite" parent="." instance=ExtResource("2_bhm20")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7cdws")

[node name="Orbs" type="Node2D" parent="."]

[node name="Orb0" type="Area2D" parent="Orbs" node_paths=PackedStringArray("sprite")]
position = Vector2(50, 0)
collision_layer = 0
collision_mask = 0
script = ExtResource("3_rdk7r")
sprite = NodePath("OracleOrbLight")

[node name="OracleOrb" type="Sprite2D" parent="Orbs/Orb0"]
texture = ExtResource("9_j71aq")

[node name="OracleOrbLight" type="Sprite2D" parent="Orbs/Orb0"]
texture = ExtResource("10_v34uc")

[node name="OrbCollisionShape2D" type="CollisionShape2D" parent="Orbs/Orb0"]
shape = SubResource("CircleShape2D_jsqd4")

[node name="Orb1" type="Area2D" parent="Orbs" node_paths=PackedStringArray("sprite")]
position = Vector2(25, -43)
collision_layer = 0
collision_mask = 0
script = ExtResource("3_rdk7r")
sprite = NodePath("OracleOrbLight")

[node name="OracleOrb" type="Sprite2D" parent="Orbs/Orb1"]
texture = ExtResource("9_j71aq")

[node name="OracleOrbLight" type="Sprite2D" parent="Orbs/Orb1"]
texture = ExtResource("10_v34uc")

[node name="OrbCollisionShape2D" type="CollisionShape2D" parent="Orbs/Orb1"]
shape = SubResource("CircleShape2D_jsqd4")

[node name="Orb2" type="Area2D" parent="Orbs" node_paths=PackedStringArray("sprite")]
position = Vector2(-25, -43)
collision_layer = 0
collision_mask = 0
script = ExtResource("3_rdk7r")
sprite = NodePath("OracleOrbLight")

[node name="OracleOrb" type="Sprite2D" parent="Orbs/Orb2"]
texture = ExtResource("9_j71aq")

[node name="OracleOrbLight" type="Sprite2D" parent="Orbs/Orb2"]
texture = ExtResource("10_v34uc")

[node name="OrbCollisionShape2D" type="CollisionShape2D" parent="Orbs/Orb2"]
shape = SubResource("CircleShape2D_jsqd4")

[node name="Orb3" type="Area2D" parent="Orbs" node_paths=PackedStringArray("sprite")]
position = Vector2(-50, 0)
collision_layer = 0
collision_mask = 0
script = ExtResource("3_rdk7r")
sprite = NodePath("OracleOrbLight")

[node name="OracleOrb" type="Sprite2D" parent="Orbs/Orb3"]
texture = ExtResource("9_j71aq")

[node name="OracleOrbLight" type="Sprite2D" parent="Orbs/Orb3"]
texture = ExtResource("10_v34uc")

[node name="OrbCollisionShape2D" type="CollisionShape2D" parent="Orbs/Orb3"]
shape = SubResource("CircleShape2D_jsqd4")

[node name="Orb4" type="Area2D" parent="Orbs" node_paths=PackedStringArray("sprite")]
position = Vector2(-25, 43)
collision_layer = 0
collision_mask = 0
script = ExtResource("3_rdk7r")
sprite = NodePath("OracleOrbLight")

[node name="OracleOrb" type="Sprite2D" parent="Orbs/Orb4"]
texture = ExtResource("9_j71aq")

[node name="OracleOrbLight" type="Sprite2D" parent="Orbs/Orb4"]
texture = ExtResource("10_v34uc")

[node name="OrbCollisionShape2D" type="CollisionShape2D" parent="Orbs/Orb4"]
shape = SubResource("CircleShape2D_jsqd4")

[node name="Orb5" type="Area2D" parent="Orbs" node_paths=PackedStringArray("sprite")]
position = Vector2(25, 43)
collision_layer = 0
collision_mask = 0
script = ExtResource("3_rdk7r")
sprite = NodePath("OracleOrbLight")

[node name="OracleOrb" type="Sprite2D" parent="Orbs/Orb5"]
texture = ExtResource("9_j71aq")

[node name="OracleOrbLight" type="Sprite2D" parent="Orbs/Orb5"]
texture = ExtResource("10_v34uc")

[node name="OrbCollisionShape2D" type="CollisionShape2D" parent="Orbs/Orb5"]
shape = SubResource("CircleShape2D_jsqd4")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource("6_trf8c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_qpr8m")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("7_ayryw")
current_state = NodePath("Spawn")

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource("8_5t67c")

[node name="Timer" type="Timer" parent="StateMachine/Spawn"]
one_shot = true

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("8_nkvch")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("9_r57yu")

[node name="ExpandTimer" type="Timer" parent="StateMachine/Attack"]
one_shot = true

[node name="SpinUpTimer" type="Timer" parent="StateMachine/Attack"]
one_shot = true

[node name="SpinDownTimer" type="Timer" parent="StateMachine/Attack"]
one_shot = true

[node name="ShrinkTimer" type="Timer" parent="StateMachine/Attack"]
one_shot = true

[node name="AttackWarningIndicator" parent="." instance=ExtResource("11_hcnwp")]
position = Vector2(0, -50)
custom_offset = Vector2(0, -50)

[node name="StunIndicator" parent="." instance=ExtResource("12_p5t44")]
position = Vector2(0, -50)
custom_offset = Vector2(0, -50)
